Add teensy3.5 & make unit test run

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,9 @@ build_src_flags = ${this.build_flags} -Wconversion
 platform = teensy
 board = teensy41
 framework = arduino
+
+[env:teensy35]
+platform=teensy
+board=teensy35
+framework=arduino
+extra_scripts = post:post_extra_script.py  
