--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
+[env:megaatmega2560-Os]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_unflags = -Os
-build_flags = -O3 -Wall -Wextra
-build_src_flags = ${this.build_flags} -Wconversion
+build_flags = -Wall -Wextra
+build_src_flags = ${this.build_flags} -Wconversion -Werror -DUNOPTIMIZED_BUILD
+
+[env:megaatmega2560-O3]
+extends = env:megaatmega2560-Os
+build_unflags = ${env:megaatmega2560-Os.build_unflags} -Os
+build_flags = ${env:megaatmega2560-Os.build_flags} -O3
+build_src_flags = ${env:megaatmega2560-Os.build_src_flags} -O3
 
 [env:teensy41]
 platform = teensy
