--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = megaatmega2560-O3
+
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
@@ -19,6 +22,7 @@ build_flags = -Wall -Wextra
 build_src_flags = ${this.build_flags} -Wconversion -Werror
 platform_packages =
     platformio/tool-simavr
+upload_flags = -n
 test_speed = 9600
 test_testing_command =
     ${platformio.packages_dir}/tool-simavr/bin/simavr
@@ -38,6 +42,15 @@ build_unflags = -Os
 build_flags = -O3
 build_src_flags = -O3
 
+[env:megaatmega2560-Og]
+build_type = debug
+extends = env:ide_megaatmega2560
+build_unflags = -Os -flto
+build_src_flags = ${this.build_flags} -DUNOPTIMIZED_BUILD
+debug_tool = simavr
+debug_test = *
+build_flags = -O0 -ggdb3 -g3
+
 [env:megaatmega2560_github_unit_test_action]
 ; PlatformIO SimAvr package doesn't run in the GitHub Ubuntu image:
 ;   error while loading shared libraries: libsimavr.so.1: cannot open shared object file: No such file or directory
@@ -46,6 +59,7 @@ build_src_flags = -O3
 ; and run the unit tests using that instead.
 extends = env:megaatmega2560
 test_speed = 9600
+upload_flags = -n
 test_testing_command =
     simavr
     -m
@@ -53,7 +67,7 @@ test_testing_command =
     -f
     16000000L
     ${platformio.build_dir}/${this.__env__}/firmware.elf
-    
+
 [env:megaatmega2560-GitHubUnitTest-Os]
 extends = env:megaatmega2560_github_unit_test_action
 build_src_flags = ${env:megaatmega2560-Os.build_src_flags}
