--- a/platformio.ini
+++ b/platformio.ini
@@ -9,21 +9,26 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = megaatmega2560-O3
+default_envs = megaatmega2560-O3-sim
 
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-
-[env:ide_megaatmega2560]
-extends = env:megaatmega2560
 build_flags = -Wall -Wextra
 build_src_flags = ${this.build_flags} -Wconversion -Werror
+
+[env:megaatmega2560_sim_unittest]
+extends = env:megaatmega2560
+build_src_flags =  ${env:megaatmega2560.build_src_flags} -DSIMULATOR
+
+[env:megaatmega2560_sim_unittest_ide]
+extends = env:megaatmega2560_sim_unittest
 platform_packages =
     platformio/tool-simavr
-upload_flags = -n
 test_speed = 9600
+upload_protocol = custom
+upload_command =
 test_testing_command =
     ${platformio.packages_dir}/tool-simavr/bin/simavr
     -m
@@ -32,34 +37,43 @@ test_testing_command =
     16000000L
     ${platformio.build_dir}/${this.__env__}/firmware.elf
 
-[env:megaatmega2560-Os]
-extends = env:ide_megaatmega2560
-build_src_flags = ${this.build_flags} -DUNOPTIMIZED_BUILD
+[env:megaatmega2560-Os-sim]
+extends = env:megaatmega2560_sim_unittest_ide
+build_src_flags = ${env:megaatmega2560_ide_sim.build_src_flags} -DUNOPTIMIZED_BUILD 
 
-[env:megaatmega2560-O3]
-extends = env:ide_megaatmega2560
+[env:megaatmega2560-O3-sim]
+extends = env:megaatmega2560_sim_unittest_ide
+build_type = release
 build_unflags = -Os
-build_flags = -O3
-build_src_flags = -O3
+build_flags = ${env:megaatmega2560_sim_unittest_ide.build_flags} -O3
+build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -O3
 
-[env:megaatmega2560-Og]
+[env:megaatmega2560-O3-device]
+extends = env:megaatmega2560
+build_type = release
+build_unflags = -Os
+build_flags = ${env:megaatmega2560.build_flags} -O3
+build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -O3
+
+[env:megaatmega2560-Og-sim]
 build_type = debug
-extends = env:ide_megaatmega2560
-build_unflags = -Os -flto
-build_src_flags = ${this.build_flags} -DUNOPTIMIZED_BUILD
+extends = env:megaatmega2560_sim_unittest_ide
+build_unflags =  ${env:megaatmega2560_sim_unittest_ide.build_unflags} -Os -flto
+build_flags = ${env:megaatmega2560_sim_unittest_ide.build_flags} -O0 -ggdb3 -g3
+build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -DUNOPTIMIZED_BUILD
 debug_tool = simavr
 debug_test = *
-build_flags = -O0 -ggdb3 -g3
 
-[env:megaatmega2560_github_unit_test_action]
+[env:megaatmega2560_github_unit_test]
 ; PlatformIO SimAvr package doesn't run in the GitHub Ubuntu image:
 ;   error while loading shared libraries: libsimavr.so.1: cannot open shared object file: No such file or directory
 ;
 ; So instead we manually install SimAVR ('sudo apt-get install -y simavr')
 ; and run the unit tests using that instead.
-extends = env:megaatmega2560
+extends = env:megaatmega2560_sim_unittest
 test_speed = 9600
-upload_flags = -n
+upload_protocol = custom
+upload_command =
 test_testing_command =
     simavr
     -m
@@ -69,14 +83,16 @@ test_testing_command =
     ${platformio.build_dir}/${this.__env__}/firmware.elf
 
 [env:megaatmega2560-GitHubUnitTest-Os]
-extends = env:megaatmega2560_github_unit_test_action
+extends = env:megaatmega2560_github_unit_test
+build_unflags = ${env:megaatmega2560-Os.build_unflags}
+build_flags = ${env:megaatmega2560-Os.build_flags}
 build_src_flags = ${env:megaatmega2560-Os.build_src_flags}
 
 [env:megaatmega2560-GitHubUnitTest-O3]
-extends = env:megaatmega2560_github_unit_test_action
-build_unflags = ${env:megaatmega2560-O3.build_unflags}
-build_flags = ${env:megaatmega2560-O3.build_flags}
-build_src_flags = ${env:megaatmega2560-O3.build_src_flags}
+extends = env:megaatmega2560_github_unit_test
+build_unflags = ${env:megaatmega2560-O3-device.build_unflags}
+build_flags = ${env:megaatmega2560-O3-device.build_flags}
+build_src_flags = ${env:megaatmega2560-O3-device.build_src_flags}
 
 [env:teensy41]
 platform = teensy
