Consistent & detailed correctness tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ default_envs = megaatmega2560-O3-sim
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_flags = -Wall -Wextra
+build_flags = -Wall -Wextra -DUNITY_INCLUDE_PRINT_FORMATTED
 build_src_flags = ${this.build_flags} -Wconversion -Werror
 
 [env:megaatmega2560_sim_unittest]
