--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -46,4 +46,5 @@ jobs:
     - name: Run Unit Tests
       # shell: pwsh
       run: | 
+        export PLATFORMIO_BUILD_FLAGS=-DEXTENDED_TEST_LEVEL=111
         pio test -v -e megaatmega2560-GitHubUnitTest-Os -e megaatmega2560-GitHubUnitTest-O3 --without-uploading
