Unit testing improvements
commit ec5aad2c25ac73c8a7bdbf31277637fda47b9564
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 15:44:22 2024 -0500

    Simplify unit tests: duplicated code to function

commit 853f35bf231aca5de6df9c1894fbaf2b54331869
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 10:51:26 2024 -0500

    Make worst case ranges worse :-)

commit 3f3636abbea2368435c310daf8a47665ab86cdd1
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 10:27:08 2024 -0500

    Narrow test scopes, increase # of tests

commit ea9d439283765b3296b152c7442ccf0978b3a848
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 10:23:21 2024 -0500

    Output  ranges when needed

commit 5ddf938fa673645bbd5ee435f2cfe7e26f1051ef
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 10:13:48 2024 -0500

    Correct include paths

commit ff8cda214f833e54e627ea98fbbae7154ad090ef
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 09:15:03 2024 -0500

    Simplify unit tests: duplicated code to function

commit 518862edce8de7d538bf56821943a74edded1402
Author: tx_haggis <13982343+adbancroft@users.noreply.github.com>
Date:   Sun Sep 15 00:57:47 2024 -0500

    We need Unity 64-bit support

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ default_envs = megaatmega2560-O3-sim
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_flags = -Wall -Wextra -DUNITY_INCLUDE_PRINT_FORMATTED
+build_flags = -Wall -Wextra -DUNITY_INCLUDE_PRINT_FORMATTED -DUNITY_SUPPORT_64
 build_src_flags = ${this.build_flags} -Wconversion -Werror
 
 [env:megaatmega2560_sim_unittest]
@@ -62,7 +62,7 @@ build_unflags =  ${env:megaatmega2560_sim_unittest_ide.build_unflags} -Os -flto
 build_flags = ${env:megaatmega2560_sim_unittest_ide.build_flags} -O0 -ggdb3 -g3
 build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -DUNOPTIMIZED_BUILD
 debug_tool = simavr
-debug_test = *
+debug_test = test_correctness
 
 [env:megaatmega2560_github_unit_test]
 ; PlatformIO SimAvr package doesn't run in the GitHub Ubuntu image:
