--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -44,7 +44,7 @@ jobs:
         sudo apt-get install -y simavr
 
     - name: Run Unit Tests
-      # shell: pwsh
       run: | 
-        export PLATFORMIO_BUILD_FLAGS=-DEXTENDED_TEST_LEVEL=111
         pio test -v -e megaatmega2560-GitHubUnitTest-Os -e megaatmega2560-GitHubUnitTest-O3 --without-uploading
+      env:
+        PLATFORMIO_BUILD_FLAGS: -D EXTENDED_TEST_LEVEL=111
