Improve debug experience

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ default_envs = megaatmega2560-O3-sim
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_flags = -Wall -Wextra -DUNITY_INCLUDE_PRINT_FORMATTED -DUNITY_SUPPORT_64
-build_src_flags = ${this.build_flags} -Wconversion -Werror
+build_flags = -Wall -Wextra -DUNITY_INCLUDE_PRINT_FORMATTED -DUNITY_SUPPORT_64 -DDEV_BUILD
+build_src_flags = ${this.build_flags} -Wconversion
 
 [env:megaatmega2560_sim_unittest]
 extends = env:megaatmega2560
@@ -58,9 +58,9 @@ build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -O3
 [env:megaatmega2560-Og-sim]
 build_type = debug
 extends = env:megaatmega2560_sim_unittest_ide
-build_unflags =  ${env:megaatmega2560_sim_unittest_ide.build_unflags} -Os -flto
-build_flags = ${env:megaatmega2560_sim_unittest_ide.build_flags} -O0 -ggdb3 -g3
-build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -DUNOPTIMIZED_BUILD
+build_unflags =  ${env:megaatmega2560_sim_unittest_ide.build_unflags} -Os -flto -g2 -ggdb2 -Werror
+build_flags = ${env:megaatmega2560_sim_unittest_ide.build_flags} -O0 -ggdb3 -g3 
+build_src_flags = ${env:megaatmega2560_sim_unittest_ide.build_src_flags} -DUNOPTIMIZED_BUILD -O0 -ggdb3 -g3 
 debug_tool = simavr
 debug_test = test_correctness
 
@@ -71,6 +71,7 @@ debug_test = test_correctness
 ; So instead we manually install SimAVR ('sudo apt-get install -y simavr')
 ; and run the unit tests using that instead.
 extends = env:megaatmega2560_sim_unittest
+build_src_flags = ${env:megaatmega2560_sim_unittest.build_src_flags} -Werror
 test_speed = 9600
 upload_protocol = custom
 upload_command =
