Fix Teensy builds

--- a/platformio.ini
+++ b/platformio.ini
@@ -99,9 +99,11 @@ build_src_flags = ${env:megaatmega2560-O3-sim.build_src_flags}
 platform = teensy
 board = teensy41
 framework = arduino
+build_flags = -DDEV_BUILD
 
 [env:teensy35]
 platform=teensy
 board=teensy35
 framework=arduino
 extra_scripts = post:post_extra_script.py  
+build_flags = -DDEV_BUILD
