Allow host program to control level of inlining using AFD_INLINE pre-processor flag.

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,14 +36,14 @@ test_testing_command =
 
 [env:megaatmega2560-Os-sim]
 extends = env:megaatmega2560_sim_unittest
-build_src_flags = ${env:megaatmega2560_ide_sim.build_src_flags} -DUNOPTIMIZED_BUILD 
+build_src_flags = ${env:megaatmega2560_ide_sim.build_src_flags} -DAFD_INLINE=1 
 
 [env:megaatmega2560-O3-sim]
 extends = env:megaatmega2560_sim_unittest
 build_type = release
 build_unflags = -Os
 build_flags = ${env:megaatmega2560_sim_unittest.build_flags} -O3
-build_src_flags = ${env:megaatmega2560_sim_unittest.build_src_flags} -O3
+build_src_flags = ${env:megaatmega2560_sim_unittest.build_src_flags} -O3 -DAFD_INLINE=3
 
 [env:megaatmega2560-O3-device]
 extends = env:megaatmega2560
