--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -1,6 +1,14 @@
 name: Arduino-lint
 
-on: [push, pull_request]
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events 
+  push:
+  pull_request:
+    
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+    
 jobs:
   lint:
     runs-on: ubuntu-latest
